# template-toolkit

./: ChangeLog.md  LICENSE  README.md  TemplateToolkitAST.hs  TemplateToolkitEval.hs  template-toolkit.cabal
Text/: TemplateToolkit.hs  TemplateToolkitAST.hs  TemplateToolkitLang.hs
example/: Main.hs  conf.json  template.tt  template2.tt
src/Text/: TemplateToolkit.hs  TemplateToolkitAST.hs  TemplateToolkitLang.hs
