name:           template-toolkit
version:        0.1.1.0
synopsis:       Template Toolkit implementation for Haskell
description:    Template Toolkit is a template processing system originally written in Perl by Andy Wardley.
                This haskell implementation includes such features as:
                scalar, array, hash variables, variable interpolation,
                conditional directives,
                loops and loop controls,
                external templates and internal blocks processing,
                many virtual methods and filters,
                templates caching.
category:       Text
homepage:       https://github.com/kobargh/template-toolkit#readme
bug-reports:    https://github.com/kobargh/template-toolkit/issues
author:         Dzianis Kabanau
maintainer:     kobargh@gmail.com
copyright:      2018 Dzianis Kabanau
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:  ./example/*.hs, ./example/*.json, ./example/*.tt

library
  exposed-modules:
      Text.TemplateToolkit
      Text.TemplateToolkitAST
      Text.TemplateToolkitLang
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , binary
    , bytestring
    , containers
    , directory
    , hashtables
    , mtl
    , parsec
    , pcre-utils
    , regex-pcre-builtin
    , scientific
    , text
    , time
    , unordered-containers
    , uri-encode
  default-language: Haskell2010
